--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: pocketsphinx_ffi_wrapper
+name: pocketsphinx_flutter
 description: "A new Flutter FFI plugin project."
 version: 0.0.1
 
@@ -20,17 +20,17 @@ dev_dependencies:
   flutter_lints: ^5.0.0
 
 ffigen:
-  name: PocketsphinxFfiWrapperBindings
+  name: PocketsphinxFlutterBindings
   description: |
-    Bindings for `src/pocketsphinx_ffi_wrapper.h`.
+    Bindings for `src/pocketsphinx_flutter.h`.
     
     Regenerate bindings with `dart run ffigen`.
-  output: 'lib/pocketsphinx_ffi_wrapper_bindings_generated.dart'
+  output: 'lib/pocketsphinx_flutter_bindings_generated.dart'
   headers:
     entry-points:
-      - 'src/pocketsphinx_ffi_wrapper.h'
+      - 'src/pocketsphinx_flutter.h'
     include-directives:
-      - 'src/pocketsphinx_ffi_wrapper.h'
+      - 'src/pocketsphinx_flutter.h'
   compiler-opts:
     - '-Iios/PocketSphinx'
   preamble: |
